Update Nav config in yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,3 +5,6 @@ markdown_extensions:
 
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML
+
+nav:
+  - About: about.md
